Fix table view on small screens

--- a/frontend/css/_table.scss
+++ b/frontend/css/_table.scss
@@ -4,8 +4,6 @@
     border: none;
     color: $colorGrey;
     border-collapse: collapse;
-    //box-shadow: 0px 3px 25.52px 3.48px rgba(112, 112, 112, 0.2);
-
     button {
         cursor: pointer;
         border: none;
@@ -14,38 +12,33 @@
         color: $colorGrey;
         margin: 0 5px;
     }
-
     button:hover {
         color: lighten($colorGrey, 20%);
     }
-
     .table__header {
         th {
             height: 80px;
             text-align: center;
             background-color: $mainColor;
         }
-
         th:first-child {
             text-align: left;
             display: flex;
             justify-content: space-between;
             align-items: center;
-
-            .triangle-down, .triangle-up {
+            .triangle-down,
+            .triangle-up {
                 margin-left: 5px;
             }
-
             .search-bar-container {
                 flex-grow: 2;
                 position: relative;
                 margin-left: 10%;
-
                 .users__search {
                     font-size: 18px;
                     background-color: transparent;
                     border-radius: 0px;
-                }  
+                }
                 .fa-search {
                     position: absolute;
                     left: 22px;
@@ -53,42 +46,40 @@
                     font-size: 25px;
                     color: darken($colorLightGrey, 10%);
                 }
-            }      
+            }
         }
     }
-
     .user-operations {
-        *:hover {
+        button:hover {
             color: lighten($colorGrey, 20%);
         }
     }
-
     tr {
         height: 50px;
         text-align: center;
     }
-
     tr:nth-child(odd) {
         background-color: white;
     }
-
     tr:nth-child(even) {
         background-color: lighten($colorRose, 10%);
     }
-
-    th:first-child, td:first-child {
+    th:first-child,
+    td:first-child {
         padding: 0 80px;
     }
-
     td:first-child {
         width: 30%;
         text-align: left;
     }
-
     .table__footer {
         height: 80px;
         text-align: left;
     }
+}
+
+.users .operations-bar {
+    display: none;
 }
 
 .table_blue {
@@ -99,5 +90,81 @@
     }
     tr:nth-child(even) {
         background-color: lighten($colorBlue, 34%);
+    }
+}
+
+@media all and (max-width: 1100px) /*and (orientation: portrait)*/ {
+    .users .operations-bar {
+        display: flex;
+        justify-content: center;
+        margin: 0;
+        margin-top: 5vh;
+        input {
+            margin: 0;
+            width: 90vw;
+        }
+    }
+
+    .table {
+        width: 100%;
+        margin: 0;
+        margin: 3vh 0 15vh 0;
+        font-size: 2vh;
+        thead {
+            display: none;
+        }
+
+        th:first-child {
+            padding: 0;
+        }
+        
+        td,th {
+            width: 95vmin;
+            display: block;
+            text-align: left;
+            padding: 0 0 0 20px;
+            &:before {
+                content: attr(data-th)": ";
+                font-weight: bold;
+                width: 50%;
+                display: inline-block;
+            }
+
+            &:first-child {
+                display: block;
+                width: 95vmin;
+                padding: 0 0 0 20px;
+                margin-top: 3vh;
+            }
+
+            &:last-child:before {
+                content: '';
+                width: 0;
+            }
+
+            &:last-child {
+                text-align: right;
+                margin: 3vh 1vh;
+                button {
+                    font-size: 3vh;
+                }
+            }
+        }
+
+        th:first-child {
+            text-align: right;
+            &:before {
+                content: "";
+            }
+        }
+    }
+
+    .table__footer-buttons {
+        button {
+            margin: 0 30px;
+            .fa {
+            font-size: 50px;
+            }
+        }
     }
 }
